--- a/new-client/styles/Accueil.module.css
+++ b/new-client/styles/Accueil.module.css
@@ -1,28 +1,21 @@
-  
-  /* Style the jumbotron with a soft gradient background and text shadow */
-  .jumbotron {
-    background: linear-gradient(to right, #e23e57, #7048e8);
-    color: #FFFFFF;
-    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
-  }
-  
-  .jumbotron h1 {
-    font-size: 4rem;
-    font-weight: 700;
-    margin-bottom: 30px;
-  }
-  
-  .jumbotron p {
-    font-size: 2rem;
-    font-weight: 400;
-    margin-bottom: 50px;
-  }
-  
-  /* Style the main content with a subtle box shadow */
-  .container {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 6px;
-    padding: 30px;
-  }
+.projects h1{
+  font-size: 2em;
+}
+
+.projects table tr{
+  height: 60px;
+  margin-top: 20px
+}
+
+.notification{
+  width: 300px;
+  height: 50px;
+  z-index: 3;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  border-radius: 10px;
+  background-color: #aaf0d1;
+  text-align: center;
+
+}
