--- a/new-client/styles/ProjectPopup.module.css
+++ b/new-client/styles/ProjectPopup.module.css
@@ -1,8 +1,9 @@
 .popup{
     position: absolute;
-    width: 300px;
-    height: 400px;
+    width: 400px;
+    height: 500px;
     right: 40%;
+    padding: 20px;
     top: 5%;
     background-color: white;
     z-index: 2;
@@ -12,14 +13,72 @@
     font-size: 1.5em;
 }
 
-.users{
+
+.listes_users{
+    height: 120px;
+    width: 350px;
     overflow-x: hidden;
 }
 
 .popup textarea{
-    height: 100px;
-    width: 200px;
+    width: 100%;
+    height: 120px;
+    padding: 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 30px;
+    color: #333;
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
     resize: none;
+}
+
+.popup textarea:focus{
+    outline: none;
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.5);
+}
+
+.popup input{
+    width: 100%;
+    height: 40px;
+    padding: 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 30px;
+    color: #333;
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
+}
+
+.popup input:focus{
+    outline: none;
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.5);
+}
+
+.popup input[type="submit"]{
+    appearance: none;
+    border-radius: 4px;
+    border-width: 0;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    font-family: "JetBrains Mono", monospace;
+    height: 38px;
+    width: 100px;
+    line-height: 0;
+    list-style: none;
+    overflow: hidden;
+    text-decoration: none;
+    transition: box-shadow .15s, transform .15s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    will-change: box-shadow, transform;
+    font-size: 18px;
+    align-self: center;
+    text-align: center;
 }
 
 .popup button{
@@ -51,4 +110,8 @@
     background-color: #aaf0d1;
     text-align: center;
 
+}
+
+.option_color{
+    background-color: #3298FF;
 }
