--- a/new-client/styles/Ticket.Id.module.css
+++ b/new-client/styles/Ticket.Id.module.css
@@ -7,8 +7,8 @@
   }
   
   .card_header {
-    background-color: #fff;
     border-bottom: none;
+    width: 100%;
   }
   
   .card_title {
@@ -23,6 +23,7 @@
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     padding: 30px;
+    height: 350px;
   }
   
   .card_body hr {
@@ -30,11 +31,15 @@
     margin-top: 20px;
     margin-bottom: 20px;
   }
+
+.title{
+  font-weight: bold;
+  color: #2c3e50;
+}
   
   .card_body p {
     font-size: 18px;
     line-height: 1.5;
-    color: #707070;
   }
   
   .card_body p strong {
