--- a/new-client/styles/Ticket.Id.module.css
+++ b/new-client/styles/Ticket.Id.module.css
@@ -23,7 +23,7 @@
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     padding: 30px;
-    height: 350px;
+    height: fit-content
   }
   
   .card_body hr {
