--- a/new-client/styles/TicketPopup.module.css
+++ b/new-client/styles/TicketPopup.module.css
@@ -1,100 +1,100 @@
 .popup {
   position: absolute;
-    background-color: white;
-    z-index: 2;
-    width: 400px;
-    left: 20%;
-    top: 2%;
-    border-radius: 20px;
-    /* padding: 20px; */
+  background-color: white;
+  z-index: 2;
+  width: 400px;
+  left: 20%;
+  top: 2%;
+  border-radius: 20px;
+  /* padding: 20px; */
 }
 
-.popup_content{
+.popup_content {
   z-index: 3;
 }
 
-.popup label{
+.popup label {
   width: 100%;
 }
 .popup textarea {
-    width: 100%;
-    resize: none;
-    height: 120px;
-    padding: 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 30px;
-    color: #333;
-    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
-    transition: all 0.3s ease-in-out;
+  width: 100%;
+  resize: none;
+  height: 120px;
+  padding: 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 30px;
+  color: #333;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out;
 }
 
 .popup textarea:focus {
-    outline: none;
-    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.5);
+  outline: none;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.5);
 }
 
 .popup input {
-    width: 100%;
-    height: 40px;
-    padding: 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 30px;
-    color: #333;
-    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
-    transition: all 0.3s ease-in-out;
+  width: 100%;
+  height: 40px;
+  padding: 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 30px;
+  color: #333;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out;
 }
 
 .popup input:focus {
-    outline: none;
-    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.5);
+  outline: none;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.5);
 }
 
 .popup_close {
-    position: absolute;
-    top: 1px;
-    right: 1px;
-    width: 50px;
-    height: 50px;
-    background-color: transparent;
-    border: none;
-    border-radius: 50%;
-    font-size: 20px;
-    color: #fff;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.3s ease-in-out;
-    outline: none;
+  position: absolute;
+  top: 1px;
+  right: 1px;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  border: none;
+  border-radius: 50%;
+  font-size: 20px;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease-in-out;
+  outline: none;
 }
 
 .popup_close:before,
 .popup_close:after {
-    content: "";
-    position: absolute;
-    width: 26px;
-    height: 4px;
-    background-color: #333;
-    border-radius: 2px;
-    transition: all 0.3s ease-in-out;
+  content: "";
+  position: absolute;
+  width: 26px;
+  height: 4px;
+  background-color: #333;
+  border-radius: 2px;
+  transition: all 0.3s ease-in-out;
 }
 
 .popup_close:before {
-    transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .popup_close:after {
-    transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
 
 .popup_close:hover:before,
 .popup_close:hover:after {
-    background-color: #333;
+  background-color: #333;
 }
 
-.form_inner{
+.form_inner {
   height: 500px;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -102,141 +102,150 @@
 
 /* CSS */
 .submit {
-    align-items: center;
-    appearance: none;
-    border-radius: 4px;
-    border-width: 0;
-    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-    box-sizing: border-box;
-    color: #fff;
-    cursor: pointer;
-    display: inline-flex;
-    font-family: "JetBrains Mono", monospace;
-    height: 48px;
-    width: 150px;
-    justify-content: center;
-    line-height: 1;
-    list-style: none;
-    overflow: hidden;
-    padding-left: 16px;
-    padding-right: 16px;
-    position: relative;
-    text-align: left;
-    text-decoration: none;
-    transition: box-shadow .15s, transform .15s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
-    will-change: box-shadow, transform;
-    font-size: 18px;
+  align-items: center;
+  appearance: none;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono", monospace;
+  height: 48px;
+  width: 150px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow 0.15s, transform 0.15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow, transform;
+  font-size: 18px;
 }
 
 .submit:focus {
-    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  box-shadow: #d6d6e7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
 }
 
 .submit:hover {
-    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-    transform: translateY(-2px);
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+  transform: translateY(-2px);
 }
 
 .submit:active {
-    box-shadow: #D6D6E7 0 3px 7px inset;
-    transform: translateY(2px);
+  box-shadow: #d6d6e7 0 3px 7px inset;
+  transform: translateY(2px);
 }
 
+.select {
+  position: relative;
+  min-width: 200px;
+}
+
+.status {
+  display: flex;
+  background-color: ;
+}
+
+.status .arrow {
+  position: absolute;
+  right: 50px;
+  top: calc(32% - 3px);
+  width: 10px;
+  height: 6px;
+  stroke-width: 2px;
+  stroke: #9098a9;
+  fill: none;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  pointer-events: none;
+}
+
+.status .arrow1 {
+  position: absolute;
+  right: 60px;
+  top: calc(38% - 3px);
+  width: 10px;
+  height: 6px;
+  stroke-width: 2px;
+  stroke: #9098a9;
+  fill: none;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  pointer-events: none;
+}
+
+.status .arrow2 {
+  position: absolute;
+  right: 40px;
+  top: calc(41% - 3px);
+  width: 10px;
+  height: 6px;
+  stroke-width: 2px;
+  stroke: #9098a9;
+  fill: none;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  pointer-events: none;
+}
 
 .select {
-    position: relative;
-    min-width: 200px;
-  }
+  -webkit-appearance: none;
+  padding: 7px 40px 7px 12px;
+  width: 100%;
+  border: 1px solid #e8eaed;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0 1px 3px -2px #9098a9;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: 16px;
+  transition: all 150ms ease;
+}
+.select:required:invalid {
+  color: #5a667f;
+}
+.select option {
+  color: #223254;
+}
+.select option[value=""][disabled] {
+  display: none;
+}
+.select:focus {
+  outline: none;
+  border-color: #07f;
+  box-shadow: 0 0 0 2px rgba(0, 119, 255, 0.2);
+}
+.select:hover + .arrow {
+  stroke: #07f;
+}
 
-  .status{
-display: flex;
-background-color: ;
-  }
+.status .arrow1,
+.arrow {
+  position: absolute;
+  width: 0;
+  height: 0;
+  pointer-events: none;
+  user-select: none;
+}
 
-  .status .arrow {
-    position: absolute;
-    right: 50px;
-    top: calc(32% - 3px);
-    width: 10px;
-    height: 6px;
-    stroke-width: 2px;
-    stroke: #9098a9;
-    fill: none;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    pointer-events: none;
-  }
-
- .status .arrow1 {
-    position: absolute;
-    right: 60px;
-    top: calc(38% - 3px);
-    width: 10px;
-    height: 6px;
-    stroke-width: 2px;
-    stroke: #9098a9;
-    fill: none;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    pointer-events: none;
-  }
-
-  .status .arrow2 {
-    position: absolute;
-    right: 40px;
-    top: calc(41% - 3px);
-    width: 10px;
-    height: 6px;
-    stroke-width: 2px;
-    stroke: #9098a9;
-    fill: none;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    pointer-events: none;
-  }
-
-  .select  {
-    -webkit-appearance: none;
-    padding: 7px 40px 7px 12px;
+@media (max-width: 450px) {
+  .popup {
     width: 100%;
-    border: 1px solid #e8eaed;
-    border-radius: 5px;
-    background: #fff;
-    box-shadow: 0 1px 3px -2px #9098a9;
-    cursor: pointer;
-    font-family: inherit;
-    font-size: 16px;
-    transition: all 150ms ease;
+    padding: 0;
+    left: 0;
+    margin: auto;
   }
-  .select:required:invalid {
-    color: #5a667f;
-  }
-  .select  option {
-    color: #223254;
-  }
-  .select  option[value=""][disabled] {
-    display: none;
-  }
-  .select:focus {
-    outline: none;
-    border-color: #07f;
-    box-shadow: 0 0 0 2px rgba(0,119,255,0.2);
-  }
-  .select:hover + .arrow{
-    stroke: #07f;
-  }
-
-  .status .arrow1,.arrow {
-    position: absolute;
-    width: 0;
-    height: 0;
-    pointer-events: none;
-    user-select: none;
-  }
-
-  
-  
+}
