--- a/new-client/styles/Accueil.module.css
+++ b/new-client/styles/Accueil.module.css
@@ -1,32 +1,45 @@
-.projects{
+.projects {
   max-height: fit-content;
   width: 90%;
+  min-height: 500px;
+  border-radius: 12px;
+
 }
 
-.projects h1{
+.projects h1 {
   font-size: 2em;
 }
 
-.projects table{
+.projects table {
 }
-.projects table tr{
+.projects table tr {
   height: 60px;
 }
 
-.projects .name{
-  color:cornflowerblue;
+.projects table td {
+  padding: 8px;
+  margin: 4px;
+}
+
+.projects table tr:nth-child(even) {
+  background-color: #f5f5f5;
+}
+
+.projects .name {
+  color: cornflowerblue;
   font-size: 1.3em;
   text-decoration: none;
   font-weight: bold;
 }
- .card{
+.card {
   width: 240px;
   align-items: center;
   appearance: none;
   /* background-color: #FCFCFD; */
   border-radius: 4px;
   border-width: 0;
-  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
   box-sizing: border-box;
   color: #fff;
   display: inline-flex;
@@ -37,23 +50,45 @@
   overflow: hidden;
 
   text-decoration: none;
-  transition: box-shadow .15s, transform .15s;
+  transition: box-shadow 0.15s, transform 0.15s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
   white-space: nowrap;
   will-change: box-shadow, transform;
-  font-size: 18px;   
-} 
+  font-size: 18px;
+}
 
+.projects h1 {
+  font-size: 2.5em;
+  font-weight: bold;
+}
 
-.addButton{
+.projects .name {
+  font-size: 1.5em;
+  font-weight: normal;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+.pagination_button {
+  padding: 0.5rem 1rem;
+  margin: 0 0.25rem;
+}
+
+.addButton {
   align-items: center;
   appearance: none;
   /* background-color: #FCFCFD; */
   border-radius: 4px;
   border-width: 0;
-  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
@@ -71,21 +106,22 @@
   position: relative;
   text-align: left;
   text-decoration: none;
-  transition: box-shadow .15s, transform .15s;
+  transition: box-shadow 0.15s, transform 0.15s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
   white-space: nowrap;
   will-change: box-shadow, transform;
-  font-size: 18px;   
+  font-size: 18px;
 }
 
-.editButton{
+.editButton {
   align-items: center;
   appearance: none;
   /* background-color: #FCFCFD; */
   border-radius: 4px;
-  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
@@ -100,18 +136,28 @@
   position: relative;
   text-align: left;
   text-decoration: none;
-  transition: box-shadow .15s, transform .15s;
+  transition: box-shadow 0.15s, transform 0.15s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
   white-space: nowrap;
   will-change: box-shadow, transform;
-  font-size: 18px;   
+  font-size: 18px;
 }
 
+.addButton:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
 
+.editButton:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
 
-.projects table{
+.projects table {
   height: 250px;
 }
 
@@ -145,9 +191,8 @@
   transition: 1s ease-in-out;
 }
 
-
 @media (max-width: 450px) {
-.desc{
-  display: none;
-}
+  .desc {
+    display: none;
+  }
 }
