--- a/new-client/styles/Project.module.css
+++ b/new-client/styles/Project.module.css
@@ -1,21 +1,24 @@
-.popup{
+.popup {
     background-color: white;
     position: absolute;
     left: 45%;
     top: 10%;
     height: 400px;
     width: 300px;
-}
-
-.select{
+    border-radius: 12px;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+  }
+  
+  .select {
     width: 90%;
-}
-
-
-.editProject .newButton{
+    margin: 10px;
+  }
+  
+  .editProject .newButton,
+  .editProject .submit {
     align-items: center;
     appearance: none;
-    /* background-color: #FCFCFD; */
+    background-color: #007bff;
     border-radius: 4px;
     border-width: 0;
     box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
@@ -23,43 +26,9 @@
     color: #fff;
     cursor: pointer;
     display: inline-flex;
-    font-family: "JetBrains Mono", monospace;
-    height: 48px;
-    width: 150px;
-    margin: 20px;
-    justify-content: center;
-    line-height: 1;
-    list-style: none;
-    overflow: hidden;
-    padding-left: 16px;
-    padding-right: 16px;
-    position: relative;
-    text-align: left;
-    text-decoration: none;
-    transition: box-shadow .15s, transform .15s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
-    will-change: box-shadow, transform;
+    font-family: "Roboto", sans-serif;
     font-size: 18px;
-}
-
-.submit{
-    align-items: center;
-    appearance: none;
-    /* background-color: #FCFCFD; */
-    border-radius: 4px;
-    border-width: 0;
-    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-    box-sizing: border-box;
-    color: #fff;
-    cursor: pointer;
-    display: inline-flex;
-    font-family: "JetBrains Mono", monospace;
     height: 48px;
-    width: 200px;
-    margin: 20px;
     justify-content: center;
     line-height: 1;
     list-style: none;
@@ -75,65 +44,59 @@
     touch-action: manipulation;
     white-space: nowrap;
     will-change: box-shadow, transform;
-    font-size: 18px;    
-}
-
-
-
-.editProject .newButton:focus {
+    margin: 20px;
+  }
+  
+  .editProject .submit {
+    width: 200px;
+  }
+  
+  .editProject .newButton {
+    width: 150px;
+  }
+  
+  .editProject .newButton:focus,
+  .editProject .submit:focus {
     box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-}
-
-
-.editProject .submit:focus {
-    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-}
-
-.editProject .newButton:hover {
+  }
+  
+  .editProject .newButton:hover,
+  .editProject .submit:hover {
     box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
     transform: translateY(-2px);
-}
-
-.editProject .submit:hover {
-    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-    transform: translateY(-2px);
-}
-
-.editProject .newButton:active {
+  }
+  
+  .editProject .newButton:active,
+  .editProject .submit:active {
     box-shadow: #D6D6E7 0 3px 7px inset;
     transform: translateY(2px);
-}
-
-.editProject .submit:active {
-    box-shadow: #D6D6E7 0 3px 7px inset;
-    transform: translateY(2px);
-}
-
-.popup .users{
+  }
+  
+  .popup .users {
     width: 100%;
     height: 70%;
-}
-
-.listes_users{
+  }
+  
+  .listes_users {
     height: 85%;
-}
-
-.tickets{
+  }
+  
+  .tickets {
     height: 400px;
     overflow-y: scroll;
-}
-
-
-.tickets .table tbody tr:hover{
+  }
+  
+  .tickets .table tbody tr:hover {
     cursor: pointer;
     background-color: #D6D6E7;
-}
-
-@media screen and (max-width: 450px) {
-    .popup{
-        left: 10%;
-        top: 5%;
-        width: 80%;
-        margin: auto;
+  }
+  
+  @media screen and (max-width: 450px) {
+    .popup {
+      left: 10%;
+      top: 5%;
+      width: 80%;
+      margin: auto;
+   
     }
-}
+}  
