--- a/new-client/styles/Ticket.Id.module.css
+++ b/new-client/styles/Ticket.Id.module.css
@@ -1,69 +1,73 @@
-
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-  
-  .card_header {
-    border-bottom: none;
-    width: 100%;
-  }
-  
-  .card_title {
-    font-size: 32px;
-    font-weight: bold;
-    color: #2c3e50;
-    margin-bottom: 20px;
-  }
-  
-  .card_body {
-    background-color: #fff;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    padding: 30px;
-    height: fit-content
-  }
-  
-  .card_body hr {
-    border-top: 1px solid #e0e0e0;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
 
-.title{
+.card_header {
+  border-bottom: none;
+  width: 100%;
+}
+
+.card_title {
+  font-size: 32px;
+  font-weight: bold;
+  color: #2c3e50;
+  margin-bottom: 20px;
+}
+
+.card_body {
+  background-color: #fff;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  padding: 30px;
+  height: fit-content;
+  transition: box-shadow 0.3s;
+}
+
+.card_body:hover {
+  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2);
+}
+
+.card_body hr {
+  border-top: 1px solid #e0e0e0;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.title {
   font-weight: bold;
   color: #2c3e50;
 }
-  
-  .card_body p {
-    font-size: 18px;
-    line-height: 1.5;
+
+.card_body p {
+  font-size: 18px;
+  line-height: 1.5;
+  font-family: 'Roboto', sans-serif;
+}
+
+.card_body p strong {
+  font-weight: bold;
+  color: #2c3e50;
+}
+
+@media screen and (max-width: 767px) {
+  .col-md-4,
+  .col-md-6 {
+    margin-bottom: 10px;
   }
-  
-  .card_body p strong {
-    font-weight: bold;
-    color: #2c3e50;
+}
+
+@media screen and (min-width: 768px) {
+  .card-body {
+    padding: 40px;
   }
-  
-  
-  @media screen and (max-width: 767px) {
-    .col-md-4,
-    .col-md-6 {
-      margin-bottom: 10px;
-    }
+}
+
+@media screen and (min-width: 992px) {
+  .container {
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
-  
-  @media screen and (min-width: 768px) {
-    .card-body {
-      padding: 40px;
-    }
-  }
-  
-  @media screen and (min-width: 992px) {
-    .container {
-      padding-top: 60px;
-      padding-bottom: 60px;
-    }
-  }
+}
