--- a/new-client/styles/ProjectPopup.module.css
+++ b/new-client/styles/ProjectPopup.module.css
@@ -1,7 +1,7 @@
 .popup{
     position: absolute;
     width: 400px;
-    height: 500px;
+    height: 600px;
     padding: 20px;
     left: 5%;
     top: 20%;
@@ -19,6 +19,12 @@
     height: 120px;
     width: 350px;
     overflow-x: hidden;
+}
+
+.popup label{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .popup textarea{
