--- a/new-client/styles/Layout.module.css
+++ b/new-client/styles/Layout.module.css
@@ -1,3 +1,36 @@
 .layout{
     height:fit-content;
 }
+
+
+.layer{
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    position: absolute;
+    background-color: transparent;
+}
+
+.custom_loader {
+    --d:22px;
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    color: #0275d8;
+    position: absolute;
+    top: 33%;
+    left: 50%;
+    box-shadow: 
+      calc(1*var(--d))      calc(0*var(--d))     0 0,
+      calc(0.707*var(--d))  calc(0.707*var(--d)) 0 1px,
+      calc(0*var(--d))      calc(1*var(--d))     0 2px,
+      calc(-0.707*var(--d)) calc(0.707*var(--d)) 0 3px,
+      calc(-1*var(--d))     calc(0*var(--d))     0 4px,
+      calc(-0.707*var(--d)) calc(-0.707*var(--d))0 5px,
+      calc(0*var(--d))      calc(-1*var(--d))    0 6px;
+    animation: s7 1s infinite steps(8);
+  }
+  
+  @keyframes s7 {
+    100% {transform: rotate(1turn)}
+  }
