--- a/new-client/styles/authentification.module.css
+++ b/new-client/styles/authentification.module.css
@@ -1,3 +1,8 @@
+.container{
+    height: 10rem;
+    background-color: yellow;
+}
+
 .card{
     width: 350px;
     font-weight: bold;
@@ -74,3 +79,4 @@
     box-shadow: #D6D6E7 0 3px 7px inset;
     transform: translateY(2px);
 }
+
