--- a/new-client/styles/Activity.module.css
+++ b/new-client/styles/Activity.module.css
@@ -55,3 +55,18 @@
   .table tbody td {
     padding: 15px 20px;
   }
+
+
+  @media (max-width: 500px) {
+    .activity {
+      width: 100%;
+    }
+  
+    .activity h1 {
+      font-size: 24px;
+    }
+  
+    .table tbody td {
+      padding: 10px 15px;
+    }
+  }
