--- a/new-client/styles/Header.module.css
+++ b/new-client/styles/Header.module.css
@@ -42,3 +42,8 @@
     background-color: #ffffff;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   }
+
+
+  .navbar_nav{
+    align-items: center;
+  }
