--- a/new-client/styles/Accueil.module.css
+++ b/new-client/styles/Accueil.module.css
@@ -188,15 +188,20 @@
   transition: 1s ease-in-out;
 }
 
+@media (max-width: 700px) {
+  .desc {
+    display: none;
+  }
+  .projects {
+    width: 125%;
+  }
+}
+
 @media (max-width: 500px) {
   .desc {
     display: none;
   }
   .projects {
-    width: 100%;
-  }
-
-  .projects table {
-    width: 100%;
+    width: 105%;
   }
 }
