--- a/new-client/styles/Activity.module.css
+++ b/new-client/styles/Activity.module.css
@@ -57,16 +57,31 @@
   }
 
 
-  @media (max-width: 500px) {
+  @media screen and (max-width: 768px) {
     .activity {
       width: 100%;
+      padding: 20px;
     }
   
     .activity h1 {
       font-size: 24px;
     }
   
+    .table_wrapper {
+      overflow-x: auto;
+    }
+  
+    .table {
+      width: 100%;
+    }
+  
+    .table thead th {
+      font-size: 14px;
+      padding: 10px 15px;
+    }
+  
     .table tbody td {
+      font-size: 14px;
       padding: 10px 15px;
     }
   }
