--- a/new-client/styles/Activity.module.css
+++ b/new-client/styles/Activity.module.css
@@ -56,9 +56,28 @@
     padding: 15px 20px;
   }
 
+  @media screen and (max-width: 768px) {
+    
+    .activity {
+      width: 120%;
+    }
+  
+    .activity h1 {
+      font-size: 24px;
+    }
+  
+    .table tbody td {
+      padding: 10px 15px;
+    }
+  }
 
   @media (max-width: 500px) {
     .activity {
+      width: 100%;
+    }
+
+    .activity table
+    {
       width: 100%;
     }
   
