--- a/new-client/styles/Tickets.module.css
+++ b/new-client/styles/Tickets.module.css
@@ -47,3 +47,13 @@
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
     transition: 1s ease-in-out;
   }
+
+@media (max-width: 768px) {
+
+  .tickets table {
+    width: 120%;
+  }
+  .tickets table thead {
+    display: none;
+  }
+}
